[package]
name = "qna"
version = "0.1.0"
authors = ["c1one"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
juniper = { git = "https://github.com/graphql-rust/juniper" }
juniper_actix = "0.2.3"
tokio-postgres = "0.7.0"
deadpool-postgres = "0.7.0"
